--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DISCORD_TOKEN=MTM5MzY0NTg5MzAzMDI0ODYwOA.GeHTFr.GrAlJKbmhNHb1RXWVJOQjnaCWljN5iDtJVaPns
+DISCORD_TOKEN=MTM5MzY0NTg5MzAzMDI0ODYwOA.GiqwP_.ZzjpnliMOZ1XwF_mrLTXOuSLsCghyizWw_NYak
